2010-06-23  Richard Henderson  <rth@redhat.com>

	* barrier.tpl, beginend.cc, clone.cc, tls.h, memcpy.cc,
	memset.cc, method-serial.cc: Revert the 2010-06-16 change.
	* config/x86/target.h (struct gtm_jmpbuf): Change CFA type to void*.
	* config/alpha/target.h: Likewise.
	* config/generic/tls.cc (gtm_mask_stack): Use it.

2010-06-23  Richard Henderson  <rth@redhat.com>

	* config/posix/cachepage.cc (gtm_cacheline_page::operator new): Use
	a mutex instead of trying a lock-free compare-and-swap on the list.
	(gtm_cacheline_page::operator delete): Likewise.

2010-06-16  Richard Henderson  <rth@redhat.com>

	* method-wbetl.cc (wbetl_dispatch::trycommit): Discard changes
	that overlap the libitm stack.
	* barrier.tpl: Mark incoming stack.
	* beginend.cc (_ITM_rollbackTransaction, _ITM_abortTransaction,
	_ITM_commitTransaction, _ITM_commitTransactionEH): Likewise.
	* clone.cc (_ITM_getTMCloneOrIrrevocable): Likewise.
	* memcpy.cc, memset.cc: Likewise.
	* method-serial.cc (_ITM_changeTransactionMode): Likewise.
	* config/generic/tls.h (gtm_thread): Add stack_top member.
	(gtm_stack_top, set_gtm_stack_top, struct gtm_stack_marker): New.
	* libitm_i.h (gtm_mask_stack): Declare.
	* config/generic/tls.cc: New file.
	* Makefile.am (libitm_la_SOURCES): Add it.
	(AM_CXXFLAGS): Turn off exceptions.
	* Makefile.in: Rebuild.
	
2010-06-16  Richard Henderson  <rth@redhat.com>

	* alloc.cc (struct gtm_alloc_action): Move definition ...
	* libitm_i.h: ... here.
	(class gtm_transaction): Declare new and delete.
	* beginend.cc (alloc_tx): Reformulate as operator new.
	(free_tx): Reformulate as operator delete.
	* config/generic/tls.h (gtm_thread): Change free_tx member to void *.

2010-06-11  Richard Henderson  <rth@redhat.com>

	* clone.cc (clone_entry_compare): Fix typo.
	From Patrik Marlier <patrick.marlier@unine.ch>.

2010-05-13  Richard Henderson  <rth@redhat.com>

	* alloc_c.cc (_ITM_malloc, _ITM_calloc, _ITM_free): Wrap functions
	in extern "C".
