@@ -1,3 +1,13 @@
+2010-06-24  Aldy Hernandez  <aldyh@redhat.com>
+
+	* alloc_c.cc (_ITM_dropReferences): New.
+	* libitm.map (_ITM_dropReferences): Add.
+	* libitm.h (_ITM_dropReferences): Add transaction_pure attribute.
+	* libitm_i.h (struct gtm_transaction): Declare
+	drop_references_allocations and drop_references_local.
+	* local.cc (rollback_local): Ignore memory when applicable.
+	(drop_references_local): New.
+
 2010-06-23  Richard Henderson  <rth@redhat.com>
 
 	* barrier.tpl, beginend.cc, clone.cc, tls.h, memcpy.cc,
